module-bundler/test-get-requires.out
/Users/gvwilson/stjs/node_modules/acorn/dist/acorn.js:2927
    var err = new SyntaxError(message);
              ^

SyntaxError: 'import' and 'export' may appear only with 'sourceType: module' (1:0)
    at Parser.pp$4.raise (/Users/gvwilson/stjs/node_modules/acorn/dist/acorn.js:2927:15)
    at Parser.pp$1.parseStatement (/Users/gvwilson/stjs/node_modules/acorn/dist/acorn.js:870:18)
    at Parser.pp$1.parseTopLevel (/Users/gvwilson/stjs/node_modules/acorn/dist/acorn.js:755:23)
    at Parser.parse (/Users/gvwilson/stjs/node_modules/acorn/dist/acorn.js:555:17)
    at Function.parse (/Users/gvwilson/stjs/node_modules/acorn/dist/acorn.js:578:37)
    at Object.parse (/Users/gvwilson/stjs/node_modules/acorn/dist/acorn.js:5143:19)
    at getRequires (file:///Users/gvwilson/stjs/module-bundler/get-requires.js:8:21)
    at file:///Users/gvwilson/stjs/module-bundler/test-get-requires.js:3:16
    at ModuleJob.run (internal/modules/esm/module_job.js:146:23)
    at async Loader.import (internal/modules/esm/loader.js:165:24) {
  pos: 0,
  loc: Position { line: 1, column: 0 },
  raisedAt: 6
}
